--- a/opencve/templates/cwes.html
+++ b/opencve/templates/cwes.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Categories (CWE) - {{ super() }}{% endblock %}
+{% block title %}CWE - {{ super() }}{% endblock %}
 
 {% block content %}
 
 <section class="content-header">
-    <h1>Categories (CWE)</h1>
+    <h1>CWE</h1>
     <ol class="breadcrumb">
         <li><a href="{{ url_for('main.home') }}">OpenCVE</a></li>
-        <li class="active">Categories (CWE)</li>
+        <li class="active">CWE</li>
     </ol>
 </section>
 
@@ -18,7 +18,7 @@
         <div class="col-xs-8">
             <div class="box box-primary">
                 <div class="box-header">
-                    <h3 class="box-title">Categories (CWE)</h3>
+                    <h3 class="box-title">CWE</h3>
                 </div>
                 <div class="box-body table-responsive no-padding">
                     <table class="table table-hover table-striped">
