--- a/opencve/templates/profiles/subscriptions.html
+++ b/opencve/templates/profiles/subscriptions.html
@@ -44,6 +44,43 @@
     <div class="col-lg-6 col-md-6 col-sm-6">
         <div class="box box-primary">
             <div class="box-header with-border">
+                <h3 class="box-title">My categories ({{ current_user.categories|length }})</h3>
+            </div>
+            <div class="box-body">
+                <div class="table-responsive">
+                    {% if current_user.categories %}
+                    <table class="table table-hover table-striped">
+                        <tbody>
+                        {% for category in current_user.categories %}
+                        <tr {% if loop.first %}style="border-top: 0px;" {% endif %}>
+                            <td style="border-top: 0px;">{{ category.name | humanize }}</td>
+                            <td class="pull-right" style="border-top: 0px;">
+                                {% if category in current_user.categories %}
+                                <button class="btn btn-danger btn-xs pull-right subscribe"
+                                        id="unsubscribe_category_{{ category.id }}" type="button">Unsubscribe
+                                </button>
+                                {% else %}
+                                <button class="btn btn-default btn-xs pull-right subscribe"
+                                        id="subscribe_category_{{ category.id }}" type="button">Subscribe
+                                </button>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    {% else %}
+                    <p>You have no subscription yet, click <a href="{{ url_for('main.categories') }}">here</a> to view the
+                        entire list of categories and products.</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="box box-primary">
+            <div class="box-header with-border">
                 <h3 class="box-title">My products ({{ current_user.products|length }})</h3>
             </div>
             <div class="box-body">
