--- a/opencve/templates/base.html
+++ b/opencve/templates/base.html
@@ -120,7 +120,7 @@
                     class="fa fa-sitemap"></i> <span> CWE</span></a></li>
                     <li {% if is_active(
                 "main.categories") %}class="active"{% endif %}><a href="{{ url_for('main.categories') }}"><i
-                    class="fa fa-shield"></i> <span> Categories</span></a></li>
+                    class="fa fa-table"></i> <span> Categories</span></a></li>
             </ul>
 
         </section>
