--- a/opencve/templates/category.html
+++ b/opencve/templates/category.html
@@ -288,24 +288,14 @@
                     <br>
                     <p>Please note that :</p>
                     <ul>
-                        <li>An .xslx file is expected</li>
-                        <li>Four columns are expected to be declared in the first three rows :</li>
+                        <li>A .xslx file is expected</li>
+                        <li>A column is expected to be declared in the first three rows :</li>
                             <ul>
-                                <li>Vendor</li>
-                                <li>Product</li>
-                                <li>Version</li>
                                 <li>
                                     Tag (CPE product tag only, it should be in the following format : <i>my_product_name</i>, you can search for the entire CPE tag <a href="https://nvd.nist.gov/products/cpe/search">here</a>)
                                 </li>
                             </ul>
-                        <li>The "Tag" column is optionnal and may have empty cells</li>
-                            <ul>
-                                <li>
-                                    If so, the program will try and guess the tag from the other columns.
-                                    Please, keep in mind that this is not perfect, you may check that every thing was imported after the process. 
-                                </li>
-                            </ul>
-                        <li>This operation may take several minutes</li>
+                        <li>This operation may take several minutes.</li>
                     <ul>
                     <!-- TODO : Maybe add an example picture of a valid file ? -->
                 </div>
