Updated excel import text

--- a/opencve/templates/category.html
+++ b/opencve/templates/category.html
@@ -292,7 +292,14 @@
                         <li>A column is expected to be declared in the first three rows :</li>
                             <ul>
                                 <li>
-                                    Tag (CPE product tag only, it should be in the following format : <i>my_product_name</i>, you can search for the entire CPE tag <a href="https://nvd.nist.gov/products/cpe/search">here</a>)
+                                    Tag (CPE product tag only, it should be in the following format : <i>my_product_name</i>.
+                                </li>
+                                <li>
+                                    CPE complete tag should be in the following format : <i>cpe:cpe_version:part:vendor:product:version:...</i><br>
+                                </li>
+                                <li>
+                                    You can search for the entire CPE tag <a href="https://nvd.nist.gov/products/cpe/search">here</a>.<br>
+                                    You can learn more on CPE <a href="https://nvd.nist.gov/products/cpe">here</a>.
                                 </li>
                             </ul>
                         <li>This operation may take several minutes.</li>
