WIP:Basic implementation of the CPE version handling

--- a/opencve/templates/category.html
+++ b/opencve/templates/category.html
@@ -288,12 +288,9 @@
                     <br>
                     <p>Please note that :</p>
                     <ul>
-                        <li>A .xslx file is expected</li>
+                        <li>A .xlsx file is expected</li>
                         <li>A column is expected to be declared in the first three rows :</li>
                             <ul>
-                                <li>
-                                    Tag (CPE product tag only, it should be in the following format : <i>my_product_name</i>.
-                                </li>
                                 <li>
                                     CPE complete tag should be in the following format : <i>cpe:cpe_version:part:vendor:product:version:...</i><br>
                                 </li>
