--- a/opencve/templates/report.html
+++ b/opencve/templates/report.html
@@ -36,7 +36,7 @@
                 <div class="tab-content" style="width: 100%;">
                     {% for key, alerts in alerts_sorted.items() %}
                     <div id="{{ key }}" class="tab-pane {% if loop.first %}active{% endif %}">
-                        <td>Impacted Categories : </td>
+                        <!-- <td>Impacted Categories : </td>
                         <td>
                         {% set displayedCategories = [] %}
                         {% for category in current_user.categories %}
@@ -56,7 +56,7 @@
                         {% if not displayedCategories %}
                         <span class="label label-default">None</span>
                         {% endif %}
-                        </td>
+                        </td> -->
                         <table class="table">
                             <thead>
                             <th>CVE</th>
