--- a/opencve/templates/reports.html
+++ b/opencve/templates/reports.html
@@ -23,7 +23,7 @@
                         <th class="col-md-2">Date</th>
                         <th class="col-md-1 text-center">Alerts</th>
                         <th>Vendors & Products</th>
-                        <th>Impacted Categories</th> 
+                        <!-- <th>Impacted Categories</th>  -->
                         </thead>
                         {% for report in reports.items %}
                         <tr>
@@ -31,7 +31,7 @@
                                 report.created_at.strftime("%b %d '%y at %H:%M") }}</a></td>
                             <td class="text-center">{{ report.alerts|length }}</td>
                             <td>{{ report.details|report_excerpt|safe }}</td>
-                            <td>
+                            <!-- <td>
                             {% set displayedCategories = [] %}
                             {% for category in current_user.categories %}
                                 {% for vendor in category.vendors %}
@@ -50,7 +50,7 @@
                             {% if not displayedCategories %}
                             <span class="label label-default">None</span>
                             {% endif %}
-                            </td>
+                            </td> -->
                         </tr>
                         {% endfor %}
                     </table>
