--- a/opencve/templates/category.html
+++ b/opencve/templates/category.html
@@ -289,7 +289,7 @@
                     <p>Please note that :</p>
                     <ul>
                         <li>A .xlsx file is expected</li>
-                        <li>A column is expected to be declared in the first three rows :</li>
+                        <li>A "tag" column is expected to be declared in the first three rows :</li>
                             <ul>
                                 <li>
                                     CPE complete tag should be in the following format : <i>cpe:cpe_version:part:vendor:product:version:...</i><br>
